navbar and moveToSection function

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,5 +5,5 @@
   <h2>Hello, I'm <span style="color: #e0126b;">Evan Nguyen</span></h2>
   <p>I'm a web developer</p>
   <hr>
-  <p class="btn-view-work">View my work <i class="fas fa-arrow-right"></i></p>
+  <p class="btn-view-work" (click)="onViewWork()">View my work<i class="fas fa-arrow-right"></i></p>
 </div>
