--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<app-home></app-home>
-<app-intro></app-intro>
-<app-gallery></app-gallery>
-<app-techs></app-techs>
-<app-about></app-about>
-<app-contact></app-contact>
+<app-home (clickViewWork)="navigateToSection()"></app-home>
+<app-navbar (clickMenu)="moveToSection($event)"></app-navbar>
+<app-intro appNavigation></app-intro>
+<app-gallery appNavigation></app-gallery>
+<app-techs appNavigation></app-techs>
+<app-about appNavigation></app-about>
+<app-contact appNavigation></app-contact>
 <app-footer></app-footer>
 
 
