--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,18 +8,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Evan Nguyen</a>
+      <a (click)="moveToSection($event)" id="home" class="navbar-brand" href="#">Evan Nguyen</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" (click)="moveToSection($event)">
-        <li class="active"><a id="intro" href="#">Introduction <span class="sr-only">(current)</span></a></li>
+        <li><a id="intro" href="#">Introduction <span class="sr-only">(current)</span></a></li>
         <li><a id="gallery" href="#">Gallery</a></li>
         <li><a id="techs" href="#">Techs</a></li>
         <li><a id="about" href="#">About Me</a></li>
         <li><a id="contact" href="#">Contact</a></li>
-        <li><a id="cover-letter" href="../../../assets/Evan Nguyen - Cover Letter.pdf">Cover Letter</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
