clean up code on removing li class active

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,11 +14,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" (click)="moveToSection($event)">
-        <li><a id="intro" href="#">Introduction <span class="sr-only">(current)</span></a></li>
-        <li><a id="gallery" href="#">Gallery</a></li>
-        <li><a id="techs" href="#">Techs</a></li>
-        <li><a id="about" href="#">About Me</a></li>
-        <li><a id="contact" href="#">Contact</a></li>
+        <li><a class="intro" href="#">Introduction <span class="sr-only">(current)</span></a></li>
+        <li><a class="gallery" href="#">Gallery</a></li>
+        <li><a class="techs" href="#">Techs</a></li>
+        <li><a class="about" href="#">About Me</a></li>
+        <li><a class="contact" href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
