started to populate some contents

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,14 @@
 <section id="about">
-  <h1>About</h1>
+  <div class="about-panel">
+    <h1>About Me</h1>
+    <p>
+      I am a web developer. 
+      <br> <br>
+      I enjoy coding, and reading blogs.
+    </p>
+    <ul>
+      <li><a href="">Resume</a></li>
+      <li><a href="">Cover Letter</a></li>
+    </ul>
+  </div>
 </section>
