--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,4 +1,10 @@
 <section id="intro">
-  <h1>Intro</h1>
+    <div class="intro-panel">
+      <h1>Evan Nguyen</h1>
+      <p>
+        I am a web developer. 
+        <br> <br>
+        I enjoy coding, and reading blogs.
+      </p>
+    </div>
 </section>
-
