--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -9,8 +9,8 @@ footer {
     color: #5B6571;
     font-size: 22px;
     width: 100%;
-    height: 200px;
-    background-color: #1B242F;
-    padding: 70px 0 50px 0;
+    /* height: 200px; */
+    /* background-color: #1B242F; */
+    padding: 50px 0 300px 0;
     position: relative;
 }
