--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -1,9 +1,32 @@
 #gallery {
     display: block;
-    height: 110vh;
+    /* height: 110vh; */
     width: 100%;
-    background-color: bisque;
-    margin-top: 0;
-    padding-top: 120px;
+    /* background-color: aquamarine; */
+    margin: 0 auto 15px;
+    padding-top: 80px;
+    text-align: center;
+}
+
+.gallery-panel {
+    background-color: #9EBEF3;
+    width: 80%;
+    margin: auto;
+    text-align: justify;
+    padding: 20px;
+    border-radius: 5px;
+    z-index: 10;
+}
+
+.thumbnail {
+    margin-bottom: 0;
+}
+
+.proj-title {
+    text-align: center;
+}
+
+.expand-gallery {
+    margin-top: 20px;
     text-align: center;
 }
