--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,3 +1,43 @@
 <section id="gallery">
-  <h1>Gallery</h1>
+  <div class="gallery-panel">
+    <h1>Gallery</h1>
+    <div class="row">
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+        <div class="proj-title">
+          <h4>Tester Dashboard</h4>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+        <div class="proj-title">
+          <h4>Tester Dashboard</h4>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+        <div class="proj-title">
+          <h4>Tester Dashboard</h4>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+        <div class="proj-title">
+          <h4>Tester Dashboard</h4>
+        </div>
+      </div>
+    </div>
+    <div class="expand-gallery">
+      <button class="btn btn-primary btn-lg">Expand Gallery</button>
+    </div>
+  </div>
 </section>
