--- a/src/app/components/techs/techs.component.html
+++ b/src/app/components/techs/techs.component.html
@@ -1,3 +1,29 @@
 <section id="techs">
-  <h1>Techs</h1>
+  <div class="techs-panel">
+    <h1>Technologies I use</h1>
+    <div class="row">
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6">
+        <div class="thumbnail">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+        </div>
+      </div>
+    </div>
+    <button class="btn btn-primary btn-lg">Expand Gallery</button>
+  </div>
 </section>
