started to populate some contents

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,9 +2,10 @@
   <div class="contact-panel">
     <h1>Contact</h1>
     <p>
-      I am a web developer and designer that will build custom sites, made to your needs. Each web site is a unique creation, crafted for a user-centered experience. Depending on the your situation, I take into account issues like speed, responsiveness, accessibility, and bandwidth. I enjoy exploring new APIs and libraries so don't be afraid to ask. 
-      <br> <br>
-      On the front end I specialize in React/Redux (but am also comfortable with jQuery and vanilla JavaScript) and use Node/Express/MongoDB on the back end. I also do React Native for mobile apps.
-    </p>
+      <p>
+        I am a web developer. 
+        <br> <br>
+        I enjoy coding, and reading blogs.
+      </p>
   </div>
 </section>
