added content for contact section and styled the view work button

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -24,8 +24,8 @@ hr {
 }
 
 .btn-view-work {
-    padding: 10px 0;
-    width: 180px;
+    padding: 10px 20px;
+    width: 250px;
     margin: 10px auto;
     border: 1px solid white;
 }
