--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a (click)="moveToSection($event)" id="home" class="navbar-brand" href="#">Evan Nguyen</a>
+      <a (click)="moveToSection($event)" class="navbar-brand" href="#">Evan Nguyen</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
