--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -17,3 +17,12 @@
     border-radius: 5px;
     z-index: 10;
 }
+
+.info {
+    padding-left: 10px;
+}
+
+.contact-info {
+    padding-left: 30px;
+    padding-bottom: 20px;
+}
