--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,11 +1,18 @@
 <section id="contact">
   <div class="contact-panel">
     <h1>Contact</h1>
-    <p>
-      <p>
-        I am a web developer. 
-        <br> <br>
-        I enjoy coding, and reading blogs.
-      </p>
+    <div class="row contact-info">
+      <div class="col-md-8">
+        <h3><i class="fas fa-2x fa-envelope"></i><a class="info" href="mailto:evannguyen85@gmail.com">Email: evannguyen85@gmail.com</a></h3>
+      </div>
+    </div>
+    <div class="row contact-info">
+      <div class="col-xs-6">
+        <h3><i class="fas fa-2x fa-phone-square"></i><span class="info">Phone: +84-984-475-689</span></h3>
+      </div>
+      <div class="col-xs-6">
+          <h3><i class="fab fa-2x fa-linkedin"></i><a class="info" href="">LinkedIn</a></h3>
+        </div>
+    </div>
   </div>
 </section>
