--- a/src/app/components/techs/techs.component.html
+++ b/src/app/components/techs/techs.component.html
@@ -1,29 +1,99 @@
 <section id="techs">
   <div class="techs-panel">
     <h1>Technologies I use</h1>
-    <div class="row">
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
+    <h3 style="margin-left: 20px;">Front End</h3>
+    <div style="margin: 30px 30px;" class="row">
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo " src="../../../assets/images/logos/html.png" alt="">
+          HTML
+        </h4>
       </div>
-
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/css.png" alt="">
+          CSS
+        </h4>
       </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/javascript.png" alt="">
+          Javascript
+        </h4>
       </div>
-      <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/bootstrap.png" alt="">
+          Bootstrap
+        </h4>
       </div>
     </div>
-    <button class="btn btn-primary btn-lg">Expand Gallery</button>
+    <div style="margin: 30px 30px;" class="row">
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/jquery.png" alt="">
+          Jquery
+        </h4>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/angular.png" alt="">
+          Angular 6+
+        </h4>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo " src="../../../assets/images/logos/highcharts.png" alt="">
+          Highcharts
+        </h4>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/infragistics.png" alt="">
+          Infragistics
+        </h4>
+      </div>
+    </div>
+    <h3 style="margin-left: 20px;">Backend End</h3>
+    <div style="margin: 30px 30px;" class="row">
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo " src="../../../assets/images/logos/dotnet.png" alt="">
+          ASP.NET
+        </h4>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/mssql.png" alt="">
+          MSSQL
+        </h4>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/node.js.png" alt="">
+          Node.js
+        </h4>
+      </div>
+      <div class="col-md-3 col-sm-3 col-xs-6">
+        <h4>
+          <img class="techs-logo" src="../../../assets/images/logos/express.png" alt="">
+          Express
+        </h4>
+      </div>
+    </div>
+      <div style="margin: 30px 30px;" class="row">
+        <div class="col-md-3 col-sm-3 col-xs-6">
+          <h4>
+            <img class="techs-logo" src="../../../assets/images/logos/mongodb.png" alt="">
+            MongoDB
+          </h4>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-6">
+          <h4>
+            <img class="techs-logo" src="../../../assets/images/logos/mongoose.png" alt="">
+            Mongoose
+          </h4>
+        </div>
+      </div>
   </div>
 </section>
