toggle fa class for view button, changed background img and color, more styling

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -3,17 +3,28 @@
     /* height: 110vh; */
     width: 100%;
     /* background-color: aquamarine; */
-    margin: 0 auto 15px;
+    margin: 0 auto;
     padding-top: 80px;
     text-align: center;
+    background-color: #303030;
+    color: white;
+}
+
+a {
+    color: #fdab21;
 }
 
 .about-panel {
-    background-color: #9EBEF3;
+    background-color: #424242;
     width: 80%;
     margin: auto;
     text-align: justify;
     padding: 20px;
     border-radius: 5px;
     z-index: 10;
+    transform: translateZ(100px);
+}
+
+p {
+    font-size: 18pt;
 }
