--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,14 +1,15 @@
 <section id="about">
   <div class="about-panel">
-    <h1>About Me</h1>
+    <h1 style="padding-bottom: 25px;">ABOUT ME</h1>
     <p>
-      I am a web developer. 
-      <br> <br>
-      I enjoy coding, and reading blogs.
+      My name is Evan. I am a web developer.
     </p>
-    <ul>
-      <li><a href="">Resume</a></li>
-      <li><a href="">Cover Letter</a></li>
-    </ul>
+    <p>
+      10 years ago, I started my professional career as a Production Engineer working in a computer chip making factory.
+      I love coding. During the time at Intel, I always looked for opportunities to code and automate my routine jobs.
+      I decided to become a professional software developer, so I joined a software development company.
+    </p>
+    <p><a href="">Resume</a></p>
+    <p><a href="">Cover Letter</a></p>
   </div>
 </section>
