--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -6,11 +6,13 @@
 
 footer {
     text-align: center;
-    color: #5B6571;
-    font-size: 22px;
+    color: #fdab21;
+    font-size: 22pt;
+    font-weight: bold;
     width: 100%;
     /* height: 200px; */
     /* background-color: #1B242F; */
-    padding: 50px 0 300px 0;
+    padding: 50px 0 400px 0;
     position: relative;
+    background-color: #303030;
 }
