--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <section id="gallery">
   <div class="gallery-panel">
-    <h1>Gallery</h1>
+    <h1 style="padding-bottom: 25px;">GALLERY</h1>
     <div class="row collapse in" id="gallery-1">
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
@@ -72,7 +72,7 @@
       </div>
     </div>
     <div class="expand-gallery">
-      <button appCollapse data-toggle="collapse" data-target="#gallery-2" class="btn btn-success btn-lg">Expand Gallery</button>
+      <button appCollapse data-toggle="collapse" data-target="#gallery-2" class="btn btn-success btn-lg" style="font-size: 18pt;">Expand Gallery</button>
     </div>
 
 
