--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,17 +8,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a (click)="moveToSection($event)" class="navbar-brand" href="#">Evan Nguyen</a>
+      <a (click)="moveToSection($event)" class="navbar-brand" href="#">EVAN NGUYEN</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" (click)="moveToSection($event)">
-        <li><a class="intro" href="#">Introduction <span class="sr-only">(current)</span></a></li>
-        <li><a class="gallery" href="#">Gallery</a></li>
-        <li><a class="techs" href="#">Techs</a></li>
-        <li><a class="about" href="#">About Me</a></li>
-        <li><a class="contact" href="#">Contact</a></li>
+        <li><a class="intro" href="#">INTRODUCTION <span class="sr-only">(current)</span></a></li>
+        <li><a class="gallery" href="#">GALLERY</a></li>
+        <li><a class="techs" href="#">TECHS</a></li>
+        <li><a class="about" href="#">ABOUT ME</a></li>
+        <li><a class="contact" href="#">CONTACT</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
