--- a/src/app/components/techs/techs.component.html
+++ b/src/app/components/techs/techs.component.html
@@ -1,7 +1,7 @@
 <section id="techs">
   <div class="techs-panel">
-    <h1>Technologies I use</h1>
-    <h3 style="margin-left: 20px;">Front End</h3>
+    <h1 style="padding-bottom: 25px;">TECHNOLOGIES I USE</h1>
+    <h2 style="margin-left: 20px; color: #fdab21;">Front End</h2>
     <div style="margin: 30px 30px;" class="row">
       <div class="col-md-3 col-sm-3 col-xs-6">
         <h4>
@@ -54,7 +54,7 @@
         </h4>
       </div>
     </div>
-    <h3 style="margin-left: 20px;">Backend End</h3>
+    <h2 style="margin-left: 20px; color: #fdab21;">Backend End</h2>
     <div style="margin: 30px 30px;" class="row">
       <div class="col-md-3 col-sm-3 col-xs-6">
         <h4>
