--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -61,3 +61,13 @@ footer {
     height: 200px;
     padding: 90px 0;
 }
+
+.bg {
+    /* background: url("https://material-portfolio-dark.vuetifyjs.com/img/john.2ed14673.png");  */
+    background-color: #303030;
+    background-position: center center;
+    width: 100%;
+    height: 110vh;
+    z-index: -10;
+    position: relative;
+}
