--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -3,23 +3,27 @@
     /* height: 110vh; */
     width: 100%;
     /* background-color: aquamarine; */
-    margin: 0 auto 15px;
+    margin: 0 auto;
     padding-top: 80px;
     text-align: center;
+    background-color: #303030;
+    color: white;
 }
 
 .contact-panel {
-    background-color: #9EBEF3;
+    background-color: #424242;
     width: 80%;
     margin: auto;
     text-align: justify;
     padding: 20px;
     border-radius: 5px;
     z-index: 10;
+    transform: translateZ(100px);
 }
 
 .info {
     padding-left: 10px;
+    color: #B1B1B1;
 }
 
 .contact-info {
