--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -4,11 +4,13 @@
 
 /* Position text in the middle of the page/image */
 .bg-text {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.5); /* Black w/opacity/see-through */
+    /* Fallback color */
+    /* background-color: rgb(0,0,0);  */
+    /* Black w/opacity/see-through */
+    /* background-color: rgba(0,0,0, 0.5);  */
     color: white;
     font-weight: bold;
-    border: 2px solid #f1f1f1;
+    /* border: 2px solid #f1f1f1; */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,14 +20,21 @@
     padding: 20px;
     text-align: center;
 }
+
+.bg-text > h2, .bg-text > p {
+    font-size: 34pt;
+}
+
+
+
 hr {
     width: 300px;
     margin: auto;
 }
 
 .btn-view-work {
-    padding: 10px 20px;
-    width: 250px;
+    padding: 15px 20px;
+    width: 200px;
     margin: 10px auto;
     border: 1px solid white;
 }
@@ -33,5 +42,13 @@ hr {
 .btn-view-work:hover {
     cursor: pointer;
     background-color: #21c2c8;
-    transition: 0.5s;
 }
+
+.btn-view-work:hover .right, .btn-view-work .down {
+    display: none;
+}
+
+.btn-view-work:hover .down {
+    display: inline-block;
+}
+
