--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,9 +1,10 @@
 <section id="intro">
     <div class="intro-panel">
-      <h1>Evan Nguyen</h1>
+      <h1 style="padding-bottom: 25px;">EVAN NGUYEN</h1>
       <p>
-        I am a web developer. 
-        <br> <br>
+        I am a web developer who specializes in ASP.NET C#.
+      </p>
+      <p>
         I enjoy coding, and reading blogs.
       </p>
     </div>
