--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,8 +1,14 @@
 nav {
+    font-size: 16pt;
     margin-top: 0;
     margin-bottom: 0;
     border-radius: 0;
 }
+
+.navbar-brand {
+    font-size: 16pt;
+}
+
 
 .sticky {
     position: fixed;
@@ -10,8 +16,4 @@ nav {
     left: 0;
     width: 100%;
     z-index: 20;
-}
-
-.link-active {
-    color: #E0126B !important;
 }
