changed font color for nav item when hover

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -9,6 +9,10 @@ nav {
     font-size: 16pt;
 }
 
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: #fdab21;
+}
+
 
 .sticky {
     position: fixed;
