fixed navbar active class jumping

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,15 +14,15 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" (click)="moveToSection($event)">
-        <li><a class="intro" href="#">INTRODUCTION <span class="sr-only">(current)</span></a></li>
+        <li><a class="intro" href="#">INTRODUCTION<span class="sr-only">(current)</span></a></li>
         <li><a class="gallery" href="#">GALLERY</a></li>
         <li><a class="techs" href="#">TECHS</a></li>
         <li><a class="about" href="#">ABOUT ME</a></li>
         <li><a class="contact" href="#">CONTACT</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
-      </ul>
+      </ul> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
