--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
-<img appResponsiveImage="../../../assets/images/bg.png">
+<div style="position: relative; display: block; width: 110%;">
+  <img style="margin-left: -4px; margin-bottom: -5px;" appResponsiveImage="../../../assets/images/bg.png">
+</div>
+
 <!-- <div class="bg-image"></div> -->
 
 <div class="bg-text">
@@ -7,7 +10,7 @@
   <!-- <hr> -->
   <h4 class="btn-view-work" (click)="onViewWork($event)">
     <span style="padding-right: 10px;">View my details</span>
-    <i class="fas fa-arrow-right right"></i>
-    <i class="fas fa fa-arrow-down down"></i>
+    <i class="fas fa-arrow-right"></i>
+    <!-- <i class="fas fa fa-arrow-down down"></i> -->
   </h4>
 </div>
