--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,11 +14,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav" (click)="moveToSection($event)">
-        <li><a class="intro" href="#">INTRODUCTION<span class="sr-only">(current)</span></a></li>
-        <li><a class="gallery" href="#">GALLERY</a></li>
-        <li><a class="techs" href="#">TECHS</a></li>
-        <li><a class="about" href="#">ABOUT ME</a></li>
-        <li><a class="contact" href="#">CONTACT</a></li>
+        <li *ngFor="let menuItem of menuItems">
+          <a [ngClass]="getClass(menuItem)" href="#">{{ menuItem }}<span *ngIf="menuItem === 'INTRODUCTION'" class="sr-only">(current)</span></a>
+        </li>
       </ul>
       <!-- <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
