collapsed navbar after click menu item on mobile screen

--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -7,7 +7,7 @@
     padding-top: 80px;
     text-align: center;
     background-color: #303030;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 .intro-panel {
