add media queries for mobile

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,12 +2,18 @@
   <div class="about-panel">
     <h1 style="padding-bottom: 25px;">ABOUT ME</h1>
     <p>
-      My name is Evan. I am a web developer.
+      My name is Evan. I am a web developer. I am currently developing my portfolio website and will populate contents into the gallery once I am done.
     </p>
     <p>
       10 years ago, I started my professional career as a Production Engineer working in a computer chip making factory.
       I love coding. During the time at Intel, I always looked for opportunities to code and automate my routine jobs.
       I decided to become a professional software developer, so I joined a software development company.
+    </p>
+    <p>
+      Crossing the road is an adventure, nobody is going to stop, you just get used to picking your time and weaving between moving vehicles. Just yesterday I watched two little girls on their way to school, at 5 years old they know how it’s done and their parents trust they’ll be safe solo.
+    </p>
+    <p>
+      Crossing the road is an adventure, nobody is going to stop, you just get used to picking your time and weaving between moving vehicles. Just yesterday I watched two little girls on their way to school, at 5 years old they know how it’s done and their parents trust they’ll be safe solo.
     </p>
     <p><a href="">Resume</a></p>
     <p><a href="">Cover Letter</a></p>
