--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div style="position: relative; display: block; width: 110%;">
+<div style="position: relative; display: block; width: 101%;">
   <img style="margin-left: -4px; margin-bottom: -5px;" appResponsiveImage="../../../assets/images/bg.png">
 </div>
 
@@ -6,7 +6,7 @@
 
 <div class="bg-text">
   <h2>Welcome! I'm <span style="color: #e0126b;">Evan Nguyen</span></h2>
-  <p>I'm a web developer</p>
+  <h2>I'm a web developer</h2>
   <!-- <hr> -->
   <h4 class="btn-view-work" (click)="onViewWork($event)">
     <span style="padding-right: 10px;">View my details</span>
