--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -2,10 +2,10 @@
     <div class="intro-panel">
       <h1 style="padding-bottom: 25px;">EVAN NGUYEN</h1>
       <p>
-        I am a web developer who specializes in ASP.NET C#.
+        Vietnam is one of our favourite countries, packed with history, stunning landscapes, cultural highlights and amazing food. It’s one of the most exciting destinations in South East Asia.
       </p>
       <p>
-        I enjoy coding, and reading blogs.
+        The Vietnamese can be some of the nicest, friendliest, kindest and happiest people you could meet. They’re charming without being pushy, helpful, lovers of children and just genuinely nice. Of course there are some bad apples and most of the bad stories involve taxi driver scams, but in all our time in Vietnam we’ve seen only good
       </p>
     </div>
 </section>
