--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -18,7 +18,7 @@ a {
     background-color: #424242;
     width: 80%;
     margin: auto;
-    text-align: justify;
+    text-align: left;
     padding: 20px;
     border-radius: 5px;
     z-index: 10;
@@ -26,5 +26,29 @@ a {
 }
 
 p {
-    font-size: 2em;
+    font-size: 18px;
+}
+
+h1 {
+    font-size: 28px;
+}
+
+@media screen and (min-width: 600px) {
+    h1 {
+        font-size: 32px;
+    }
+
+    p {
+        font-size: 22px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 36px;
+    }
+
+    p {
+        font-size: 24px;
+    }
 }
