--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -30,3 +30,19 @@
     padding-left: 30px;
     padding-bottom: 20px;
 }
+
+.contact-panel h2 {
+    font-size: 22px;
+}
+
+@media screen and (min-width: 600px) {
+    .contact-panel h2 {
+        font-size: 26px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .contact-panel h2 {
+        font-size: 30px;
+    }
+}
