--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -21,11 +21,9 @@
     text-align: center;
 }
 
-.bg-text > h2, .bg-text > p {
-    font-size: 34pt;
+.bg-text > h2 {
+    font-size: 30px;
 }
-
-
 
 hr {
     width: 300px;
@@ -62,3 +60,14 @@ hr {
     display: inline-block;
 } */
 
+@media screen and (min-width: 600px) {
+    .bg-text > h2 {
+        font-size: 34px;
+    } 
+}
+
+@media screen and (min-width: 768px) {
+    .bg-text > h2 {
+        font-size: 40px;
+    }
+}
