--- a/src/app/components/techs/techs.component.css
+++ b/src/app/components/techs/techs.component.css
@@ -10,16 +10,12 @@
     color: white;
 }
 
-h4 {
-    font-size: 18pt;
-}
-
 .techs-panel {
     background-color: #424242;
-    width: 80%;
+    width: 95%;
     margin: auto;
     text-align: justify;
-    padding: 20px;
+    padding: 10px;
     border-radius: 5px;
     z-index: 10;
     transform: translateZ(100px);
@@ -29,4 +25,44 @@ h4 {
     width: 40px;
     height: 40px;
     margin-right: 5px;
+}
+
+
+h1 {
+    font-size: 28px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+@media screen and (min-width: 600px) {
+    h1 {
+        font-size: 32px;
+    }
+
+    h4 {
+        font-size: 22px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 36px;
+    }
+
+    h4 {
+        font-size: 16px;
+    }
+
+    .techs-panel {
+        width: 80%;
+        padding: 15px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    h4 {
+        font-size: 22px;
+    }
 }
