--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -16,10 +16,10 @@ a {
 
 .about-panel {
     background-color: #424242;
-    width: 80%;
+    width: 95%;
     margin: auto;
     text-align: left;
-    padding: 20px;
+    padding: 10px;
     border-radius: 5px;
     z-index: 10;
     transform: translateZ(100px);
@@ -50,5 +50,10 @@ h1 {
 
     p {
         font-size: 24px;
+    }
+
+    .about-panel {
+        width: 80%;
+        padding: 15px;
     }
 }
