--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -2,7 +2,6 @@
     display: block;
     /* height: 110vh; */
     width: 100%;
-    /* background-color: aquamarine; */
     margin: 0 auto;
     padding-top: 80px;
     text-align: center;
@@ -12,37 +11,127 @@
 
 .contact-panel {
     background-color: #424242;
-    width: 80%;
+    width: 95%;
     margin: auto;
-    text-align: justify;
-    padding: 20px;
+    text-align: left;
+    padding: 10px;
     border-radius: 5px;
     z-index: 10;
     transform: translateZ(100px);
 }
 
 .info {
-    padding-left: 10px;
+    padding-left: 5px;
     color: #B1B1B1;
 }
 
 .contact-info {
-    padding-left: 30px;
-    padding-bottom: 20px;
+    padding-left: 5px;
+    padding-bottom: 5px;
 }
 
 .contact-panel h2 {
-    font-size: 22px;
+    font-size: 18px;
+}
+
+.contact-form {
+    width: 90%;
+    margin: auto;
+    display: block;
+    /* height: 200px; */
+    /* background-color: pink; */
+    /* margin-bottom: 30px; */
+}
+
+.contact-detail h3 {
+    color: #FDAB21;
+    font-size: 24px;
+}
+
+.contact-detail {
+    width: 90%;
+    margin: auto;
+    display: block;
 }
 
 @media screen and (min-width: 600px) {
     .contact-panel h2 {
         font-size: 26px;
     }
+
+    .info {
+        padding-left: 10px;
+    }
+    
+    .contact-info {
+        padding-left: 15px;
+        padding-bottom: 15px;
+    }
 }
 
 @media screen and (min-width: 768px) {
     .contact-panel h2 {
-        font-size: 30px;
+        font-size: 18px;
+    }
+
+    .contact-info {
+        padding-left: 15px;
+        padding-bottom: 5px;
+    }
+
+    .info {
+        padding-left: 5px;
+    }
+      
+    .contact-panel {
+        width: 80%;
+        padding: 15px;        
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .contact-panel {
+        display: inline-block;
+        flex-wrap: wrap;
+    }
+    .contact-form {
+        width: 50%;
+        margin-bottom: 0;
+        order: 0;
+        float: left;
+    }
+
+    .contact-detail {
+        width: 50%;
+        margin: auto;
+        display: inline-block;
+        order: 1;
+        padding-left: 10px;
+    }
+
+    .contact-detail h3 {
+        padding-left: 15px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .contact-detail {
+        width: 50%;
+        margin: auto;
+        display: inline-block;
+        order: 1;
+        padding-left: 20px;
+    }
+
+    .contact-detail h3 {
+        padding-left: 24px;
+    }
+
+    .contact-panel h2 {
+        font-size: 22px;
+    }
+
+    .info {
+        padding-left: 10px;
     }
 }
