template driven form for contact form and post to server on visitor submit

--- a/src/app/components/contact-form/contact-form.component.css
+++ b/src/app/components/contact-form/contact-form.component.css
@@ -31,3 +31,11 @@ button {
 button:hover {
     background-color: #FDAB21; 
 }
+
+.btn[disabled] {
+    opacity: 0.3;
+}
+.btn[disabled]:hover {
+    background-color: #FDAB21; 
+    opacity: 0.3;
+}
