--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -3,43 +3,56 @@
     <h1 style="padding-bottom: 25px;">GALLERY</h1>
     <div class="row collapse in" id="gallery-1">
       <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
-        <div class="proj-title">
-          <h4>Tester Dashboard</h4>
-        </div>
+        <a href="JavaScript:Void(0);">
+          <div class="thumbnail">
+            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+              alt="">
+          </div>
+          <div class="proj-title">
+            <h4>Tester Dashboard</h4>
+          </div>
+        </a>
       </div>
 
       <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
-        <div class="proj-title">
-          <h4>Tester Dashboard</h4>
-        </div>
+        <a href="JavaScript:Void(0);">
+          <div class="thumbnail">
+            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+              alt="">
+          </div>
+          <div class="proj-title">
+            <h4>Tester Dashboard</h4>
+          </div>
+        </a>
       </div>
       <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
-        <div class="proj-title">
-          <h4>Tester Dashboard</h4>
-        </div>
+        <a href="JavaScript:Void(0);">
+          <div class="thumbnail">
+            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+              alt="">
+          </div>
+          <div class="proj-title">
+            <h4>Tester Dashboard</h4>
+          </div>
+        </a>
       </div>
       <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
-        </div>
-        <div class="proj-title">
-          <h4>Tester Dashboard</h4>
-        </div>
+        <a href="JavaScript:Void(0);">
+          <div class="thumbnail">
+            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+              alt="">
+          </div>
+          <div class="proj-title">
+            <h4>Tester Dashboard</h4>
+          </div>
+        </a>
       </div>
     </div>
     <div class="row collapse" id="gallery-2">
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="">
         </div>
         <div class="proj-title">
           <h4>Tester Dashboard</h4>
@@ -48,7 +61,8 @@
 
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="">
         </div>
         <div class="proj-title">
           <h4>Tester Dashboard</h4>
@@ -56,7 +70,8 @@
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="">
         </div>
         <div class="proj-title">
           <h4>Tester Dashboard</h4>
@@ -64,7 +79,8 @@
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
+          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="">
         </div>
         <div class="proj-title">
           <h4>Tester Dashboard</h4>
@@ -72,7 +88,8 @@
       </div>
     </div>
     <div class="expand-gallery">
-      <button appCollapse data-toggle="collapse" data-target="#gallery-2" class="btn btn-success btn-lg" style="font-size: 18pt;">Expand Gallery</button>
+      <button appCollapse data-toggle="collapse" data-target="#gallery-2" class="btn btn-success btn-lg" style="font-size: 18pt;">Expand
+        Gallery</button>
     </div>
 
 
