--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -58,7 +58,7 @@ section.active {}
 footer {
     text-align: center;
     width: 100%;
-    height: 200px;
+    /* height: 200px; */
     padding: 90px 0;
 }
 
