--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,15 +1,18 @@
 <h3>Send me a message</h3>
-<form action="">
+<form (submit)="onSubmit(formContact);" #formContact = "ngForm">
   <div class="form-group">
-    <input class="form-control" type="text" name="name" placeholder="Name">
+    <input class="form-control" type="text" name="name" [(ngModel)]="name" placeholder="Name" required>
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="email" placeholder="Your email">
+    <input class="form-control" type="text" name="email" [(ngModel)]="email" placeholder="Your email" required>
   </div>
   <div class="form-group">
-    <textarea class="form-control" rows="5" id="message" placeholder="Message"></textarea>
+    <input class="form-control" type="text" name="subject" [(ngModel)]="subject" placeholder="Submit" required>
+  </div>
+  <div class="form-group">
+    <textarea class="form-control" rows="5" id="message" name="message" [(ngModel)]="message" placeholder="Message" required></textarea>
   </div>
   <div style="text-align: right;">
-    <button type="submit" class="btn btn-lg btn-primary">Submit</button>
+    <button type="submit" class="btn btn-lg btn-primary" [disabled]="formContact.invalid">Submit</button>
   </div>
 </form>
