--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,13 +1,13 @@
 <h3>Send me a message</h3>
 <form (submit)="onSubmit(formContact);" #formContact = "ngForm">
   <div class="form-group">
-    <input class="form-control" type="text" name="name" [(ngModel)]="name" placeholder="Name" required>
+    <input class="form-control" type="text" name="name" [(ngModel)]="name" placeholder="Your name" required>
   </div>
   <div class="form-group">
     <input class="form-control" type="text" name="email" [(ngModel)]="email" placeholder="Your email" required>
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="subject" [(ngModel)]="subject" placeholder="Submit" required>
+    <input class="form-control" type="text" name="subject" [(ngModel)]="subject" placeholder="Subject" required>
   </div>
   <div class="form-group">
     <textarea class="form-control" rows="5" id="message" name="message" [(ngModel)]="message" placeholder="Message" required></textarea>
