--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -6,7 +6,7 @@
     margin: 0 auto;
     padding-top: 80px;
     text-align: center;
-    background-color: #303030; 
+    background-color: #303030;
 }
 .gallery-panel {
     background-color: #424242;
@@ -20,12 +20,24 @@
     transform: translateZ(100px);
 }
 
-.thumbnail {
-    margin-bottom: 0;
+.thumbnail > img {
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    background-size: cover;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
+a:hover > .proj-title {
+    color: white;
+}
 .proj-title {
     text-align: center;
+    color: #9d9d9d;
 }
 
 .expand-gallery {
