--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-3 col-sm-6">
         <a href="JavaScript:Void(0);">
           <div class="thumbnail">
-            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            <img src="../../../assets/images/dashboard.png"
               alt="">
           </div>
           <div class="proj-title">
@@ -15,75 +15,72 @@
       </div>
 
       <div class="col-md-3 col-sm-6">
-        <a href="JavaScript:Void(0);">
+        <a href="JavaScript:Void(0);" (click)="openDialog()">
+          <!-- https://boiling-brook-33207.herokuapp.com/ -->
           <div class="thumbnail">
-            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            <img src="../../../assets/images/calculator.png"
               alt="">
           </div>
           <div class="proj-title">
-            <h4>Tester Dashboard</h4>
+            <h4>Calculator</h4>
           </div>
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
-        <a href="JavaScript:Void(0);">
           <div class="thumbnail">
-            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            <img src="../../../assets/images/placeholder.png"
               alt="">
           </div>
           <div class="proj-title">
-            <h4>Tester Dashboard</h4>
+            <h4>Placeholder</h4>
           </div>
-        </a>
       </div>
       <div class="col-md-3 col-sm-6">
-        <a href="JavaScript:Void(0);">
           <div class="thumbnail">
-            <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            <img src="../../../assets/images/placeholder.png"
               alt="">
           </div>
           <div class="proj-title">
-            <h4>Tester Dashboard</h4>
+            <h4>Placeholder</h4>
           </div>
-        </a>
       </div>
     </div>
     <div class="row collapse" id="gallery-2">
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          <img src="../../../assets/images/placeholder.png"
             alt="">
         </div>
         <div class="proj-title">
-          <h4>Tester Dashboard</h4>
+          <h4>Placeholder</h4>
         </div>
       </div>
 
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          <img src="../../../assets/images/placeholder.png"
             alt="">
         </div>
         <div class="proj-title">
-          <h4>Tester Dashboard</h4>
+          <h4>Placeholder</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          <img src="../../../assets/images/placeholder.png"
             alt="">
         </div>
         <div class="proj-title">
-          <h4>Tester Dashboard</h4>
+          <h4>Placeholder</h4>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1544419751-cb964c35c9a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+          <img src="../../../assets/images/placeholder.png"
             alt="">
         </div>
         <div class="proj-title">
-          <h4>Tester Dashboard</h4>
+          <h4>Placeholder</h4>
         </div>
       </div>
     </div>
@@ -91,8 +88,5 @@
       <button appCollapse data-toggle="collapse" data-target="#gallery-2" class="btn btn-success btn-lg" style="font-size: 18pt;">Expand
         Gallery</button>
     </div>
-
-
-
   </div>
 </section>
